--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fastify/cors": "^8.4.0",
     "axios": "^1.5.0",
+    "dotenv": "^16.3.1",
     "fastify": "^4.23.2"
   },
   "devDependencies": {
