--- a/front/package.json
+++ b/front/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web",
+  "name": "front",
   "version": "2.0.0",
   "private": true,
   "scripts": {
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "embla-carousel-react": "^8.1.6",
     "lucide-react": "^0.383.0",
     "next": "14.2.3",
     "react": "^18",
