--- a/back/package.json
+++ b/back/package.json
@@ -10,14 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@fastify/cors": "^9.0.1",
-    "axios": "^1.7.9",
-    "dotenv": "^16.4.7",
-    "fastify": "^4.29.0"
+    "@fastify/cors": "10.0.2",
+    "axios": "1.7.9",
+    "dotenv": "16.4.7",
+    "fastify": "5.2.1"
   },
   "devDependencies": {
-    "@types/node": "^20.17.10",
-    "tsx": "^4.19.2",
-    "typescript": "^5.7.2"
+    "@types/node": "22.13.4",
+    "tsx": "4.19.3",
+    "typescript": "5.7.3"
   }
 }
