--- a/back/package.json
+++ b/back/package.json
@@ -1,6 +1,6 @@
 {
   "name": "back",
-  "version": "1.0.0",
+  "version": "4.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -10,14 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@fastify/cors": "10.0.2",
-    "axios": "1.7.9",
-    "dotenv": "16.4.7",
-    "fastify": "5.2.1"
+    "@fastify/cors": "^11.0.1",
+    "axios": "^1.8.4",
+    "dotenv": "^16.5.0",
+    "fastify": "^5.3.2"
   },
   "devDependencies": {
-    "@types/node": "22.13.4",
+    "@types/node": "^22.14.1",
     "tsx": "4.19.3",
-    "typescript": "5.7.3"
+    "typescript": "^5.8.3"
   }
 }
