--- a/back/package.json
+++ b/back/package.json
@@ -10,14 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@fastify/cors": "^11.0.1",
-    "axios": "^1.8.4",
-    "dotenv": "^16.5.0",
-    "fastify": "^5.3.2"
+    "@fastify/cors": "11.0.1",
+    "axios": "1.10.0",
+    "dotenv": "17.1.0",
+    "fastify": "5.4.0"
   },
   "devDependencies": {
-    "@types/node": "^22.14.1",
-    "tsx": "4.19.3",
-    "typescript": "^5.8.3"
+    "@types/node": "24.0.11",
+    "tsx": "4.20.3",
+    "typescript": "5.8.3"
   }
 }
