--- a/back/package.json
+++ b/back/package.json
@@ -13,7 +13,9 @@
     "@fastify/cors": "11.1.0",
     "axios": "1.11.0",
     "dotenv": "17.2.1",
-    "fastify": "5.5.0"
+    "fastify": "5.5.0",
+    "fastify-sqlite": "^1.1.0",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@types/node": "24.3.0",
