--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "1.13.2",
+    "framer-motion": "^12.23.24",
+    "lucide-react": "^0.554.0",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0"
